# omero-browser-qt

./: .gitignore  MANIFEST.in  README.md  mkdocs.cmd  mkdocs.yml  omero_viewer.spec  omero_viewer_launcher.py  omero_viewer_quickstart.spec  pyproject.toml  run_viewer.cmd
.github/workflows/: docs.yml
docs/: changelog.md  contributing.md  getting-started.md  index.md
docs/api/: browser_dialog.md  gateway.md  image_loader.md  index.md  rendering.md  scale_bar.md  selection_context.md  tree_model.md  view_backends.md  webclient.md
docs/examples/: demo-viewer.md  index.md  omero-viewer.md  pixel-loading.md  simple-selection.md  structured-selection.md
docs/stylesheets/: black-theme.css
docs/user-guide/: browser-dialog.md  display-settings.md  pixel-loading.md  viewer-3d.md  web-backend.md
examples/: viewer_demo.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/api/browser_dialog/: index.html
site/api/gateway/: index.html
site/api/image_loader/: index.html
site/api/rendering/: index.html
site/api/scale_bar/: index.html
site/api/selection_context/: index.html
site/api/tree_model/: index.html
site/api/view_backends/: index.html
site/api/webclient/: index.html
site/changelog/: index.html
site/contributing/: index.html
site/examples/: index.html
site/examples/demo-viewer/: index.html
site/examples/omero-viewer/: index.html
site/examples/pixel-loading/: index.html
site/examples/simple-selection/: index.html
site/examples/structured-selection/: index.html
site/getting-started/: index.html
site/search/: search_index.json
site/user-guide/browser-dialog/: index.html
site/user-guide/display-settings/: index.html
site/user-guide/pixel-loading/: index.html
site/user-guide/viewer-3d/: index.html
site/user-guide/web-backend/: index.html
src/omero_browser_qt/: __init__.py  browser_dialog.py  gateway.py  image_loader.py  login_dialog.py  omero_viewer.py  rendering.py  scale_bar.py  selection_context.py  tree_model.py  view_backends.py  webclient.py  widgets.py
