[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omero-browser-qt"
version = "0.1.5"
description = "Reusable PyQt6 dialog for browsing and retrieving images from OMERO via ICE"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Ron Hoebe" },
]
keywords = ["omero", "pyqt6", "microscopy", "imaging", "browser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "PyQt6",
    "numpy",
    "dask[array]",
]

[project.optional-dependencies]
viewer3d = [
    "vispy",
    "PyOpenGL",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/Cellular-Imaging-Amsterdam-UMC/omero-browser-qt"
Documentation = "https://cellular-imaging-amsterdam-umc.github.io/omero-browser-qt/"
Issues = "https://github.com/Cellular-Imaging-Amsterdam-UMC/omero-browser-qt/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/omero_browser_qt"]
